aws-iaas-examples/aws-iaas-alb/security_groups.tf
# Security Group para el Balanceador de Carga (ALB)
resource "aws_security_group" "alb_sg" {
  name        = "alb_sg_proyecto"
  description = "Permitir trafico HTTP al ALB"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ALB-SG"
  }
}

# Security Group para las instancias EC2
resource "aws_security_group" "ec2_sg" {
  name        = "ec2_sg_proyecto"
  description = "Permitir HTTP desde el ALB y SSH desde internet"
  vpc_id      = var.vpc_id

  ingress {
    description     = "HTTP solo desde el Load Balancer"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  ingress {
    description = "SSH desde cualquier lugar"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "EC2-SG"
  }
}
